# shuyeguanli

./: LICENSE  README.md
client/: README.md  SYGL_WHY.pro  json_sy.cpp  json_sy.h  main.cpp  mainwindow_sy.cpp  mainwindow_sy.h  moer.cpp  moer.h  qmenu_WHY.cpp  qmenu_WHY.h  socket_sy.cpp  socket_sy.h  zujian_sy.cpp  zujian_sy.h
sever/: CMakeLists.txt  json.cpp  json.h  lua_CPP.cpp  lua_CPP.h  sock.cpp  socket.cpp  socket.h  sql_sy.cpp  sql_sy.h  test.lua
sever/CToLua/: CMakeLists.txt  cToLua.cpp  cToLua.h
